--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,7 +1,10 @@
-.odd_number,
-.cooler {
+.odd_number {
     background-color: #ff8181a4;
     font-family: Verdana, "DejaVu Sans", sans-serif,;   
+}
+
+.adjust-font {
+    font-size: 24px;
 }
 
 #el1 {
@@ -9,12 +12,7 @@
     font-size: 36px;
 }
 
-.cooler {
-    font-size: 24px;
-}
-
 #el2 {
     background-color: rgba(0, 255, 0, 0.9);
-    font-size: 24px;
     font-weight: bold;
 }
