--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -7,21 +7,32 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 3px 10px 10px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 20px;
+  margin-bottom: 0px;
+  padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
+  margin: 10px auto;
+  padding: 15px 10px;
+  /* border: solid black; */
 }
 
 .button-container {
   background: #e3f4ff;
+  padding: 8px 10px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: inline-block;
+  padding: 8px 24px;
 }
