--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -33,6 +33,7 @@ body {
 button {
   background: white;
   border: 1px solid #eee;
-  display: inline-block;
+  display: block;
+  margin: 0 auto;
   padding: 8px 24px;
 }
